--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,24 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# -----------------------------------------------------------------------------
+# Terraform
+# -----------------------------------------------------------------------------
+# Local .terraform directories
+.terraform/
+# Terraform state files
+*.tfstate
+*.tfstate.*
+# Crash log files
+crash.log
+# Exclude override files as they are usually local
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+# CLI configuration files
+.terraformrc
+terraform.rc
+# Terraform lock file (can be committed for reproducibility, but often ignored in team settings)
+.terraform.lock.hcl
