--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,11 @@ target-version = "py313"
 select = ["E", "W", "F", "I", "N", "D", "ANN", "S", "C4", "B", "A", "RUF"]
 ignore = ["ANN101", "ANN102"]  # ignore missing type hints for self/cls
 
+# Ignore N805 for Pydantic field_validator methods (they require cls not self)
+[tool.ruff.lint.per-file-ignores]
+"src/service_order_lambda/models.py" = ["N805"]
+"tests/*.py" = ["S101", "ANN001", "ANN201", "ANN202", "E501"]
+
 [tool.ruff.lint.pydocstyle]
 convention = "google"
 
