--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,12 +36,12 @@ target-version = "py313"
 
 [tool.ruff.lint]
 select = ["E", "W", "F", "I", "N", "D", "ANN", "S", "C4", "B", "A", "RUF"]
-ignore = ["ANN101", "ANN102"]  # ignore missing type hints for self/cls
+ignore = ["ANN401"]  # Allow using Any in type annotations
 
 # Ignore N805 for Pydantic field_validator methods (they require cls not self)
 [tool.ruff.lint.per-file-ignores]
 "src/service_order_lambda/models.py" = ["N805"]
-"tests/*.py" = ["S101", "ANN001", "ANN201", "ANN202", "E501"]
+"tests/*.py" = ["S101", "ANN001", "ANN201", "ANN202", "E501", "I001"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
